# DTUWEC

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeLists_utils.txt  DTUWEC-SC-mpi.code-workspace  README.md  ci.py  file_info.h
custom-build/: CMakeCache.txt  Makefile  cmake_install.cmake
custom-build/src/dtu_we_controller/: Makefile  cmake_install.cmake  version.h
custom-build/src/dtu_we_controller_bladed/: Makefile  cmake_install.cmake  version.h
custom-build/src/flap_controller_cyclic/: Makefile  cmake_install.cmake  version.h
custom-build/src/flap_controller_individual_aep_u_f/: Makefile  cmake_install.cmake  version.h
custom-build/src/individual_pitch_controller/: Makefile  cmake_install.cmake  version.h
examples/FAST/DTU10MW/: additional_control_parameters.txt  controller_input.DTU10MW.DTUWEC.txt
examples/FAST/NREL5MW/: wpdata.100  (+4 more)
src/: dtu_controller.sln
src/dtu_we_controller/: BuildInfo.f90  CMakeLists.txt  dtu_we_controller.f90  dtu_we_controller.vfproj  dtu_we_controller_fcns.f90  floating_controller.f90  turbine_controller.f90  version.rc  write_version.f90
src/dtu_we_controller_bladed/: CMakeLists.txt  SCClientSubs.f90  dtu_we_controller_bladed.f90  version.bat
src/flap_controller_individual_aep_u_f/: CMakeLists.txt
src/individual_pitch_controller/: CMakeLists.txt  individual_pitch_controller.f90  individual_pitch_controller.vfproj  individual_pitch_controller_fcns.f90  write_version.f90
src/modules/: global_variables.f90  user_defined_types.f90
tests/: test_controller.py
tests/test_files/: dtu_10mw_rwt_short.sel
(+5 files in other folders)
